# anquan2

./: .gitignore  AGENTS.md  README.md  compose.benchmark.yaml  compose.yaml
secmind/backend/: .agent-audit.yaml  .dockerignore  .env.example  .env.test  Dockerfile  README.md  benchmark_gates.py  docker-compose.yml  pyproject.toml
secmind/backend/agents/: __init__.py  actions.py  base.py  chains.py  dispatcher.py  guardrail.py  langgraph_runtime.py  loop_guard.py  mock_orchestrator.py  native.py  persistence.py  registry.py  runtime_dependencies.py  runtime_orchestrator.py  subgraph.py  tool_catalog.py  tool_guidance.py  verifier.py
secmind/backend/alembic/: README.md  alembic.ini  env.py
secmind/backend/alembic/versions/: 20260715_0001_runtime_and_projections.py  20260719_0002_native_business_schema.py  (+2 more)
secmind/backend/app/: __init__.py  main.py
secmind/backend/knowledge/: __init__.py  embedding.py  models.py  qdrant_store.py  service.py  store.py
secmind/backend/ledger/: __init__.py  checkpoints.py  jsonl_store.py  projections.py  runtime_store.py  serialization.py
secmind/backend/llm/: base.py  factory.py  http_client.py  ledger.py  manager.py  openai_compatible.py  provider_request.py  structured_output.py
secmind/backend/prompts/: __init__.py  catalog.py  importer.py  registry.py  renderer.py
secmind/backend/sandbox/: __init__.py  base.py
secmind/backend/secmind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
secmind/backend/tests/: conftest.py  test_agent_graph_control.py  test_benchmark_gates.py  test_capability_router.py  test_checkpoint_factory.py  test_checkpoint_postgres.py  test_contracts.py  test_environment_isolation.py  test_event_stream.py  test_flows.py  test_graphql_api.py  test_graphql_contract.py  test_health.py  test_knowledge_embedding.py  test_knowledge_qdrant.py  test_knowledge_service.py  test_langgraph_runtime.py  test_ledger.py  test_llm_config.py  test_llm_ledger.py  test_llm_structured_output.py  test_long_term_tasks.py  test_loop_guard_verifier.py  test_mcp_runtime.py  test_model_config_api.py  test_native_agents.py  test_native_contracts.py  test_native_database.py  test_primary_regressions.py  test_projection_migrations.py  test_projection_reducer.py  test_prompt_candidates.py  test_prompt_projection.py  test_prompt_runtime.py  test_provider_protocol.py  test_runtime_api.py  test_security.py  test_service_context.py  test_task_contracts.py  test_tool_catalog.py  (+3 more)
secmind/backend/tools/: __init__.py  bandit_tool.py  base.py  registry.py  runtime.py  tool-agent-guide.json
(+231 files in other folders)
