[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secmind-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the SecMind security-agent competition project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "bandit>=1.7.10,<2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1,<4",
  "langgraph>=1.2.9,<1.3",
  "mcp>=1.12,<2",
  "openpyxl>=3.1,<4",
  "ormsgpack>=1.10,<2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.18,<1",
  "sqlalchemy>=2.0,<3",
  "strawberry-graphql[fastapi]>=0.280,<1",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
checkpoint = [
  "aiosqlite>=0.20,<1",
  "langgraph-checkpoint-postgres>=2.0,<4",
  "langgraph-checkpoint-sqlite>=2.0,<4",
]
postgres = ["psycopg[binary,pool]>=3.2,<4"]
qdrant = ["qdrant-client>=1.13,<2"]
dev = [
  "agent-audit==0.19.2",
  "pip-audit==2.10.1",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*", "tools*", "llm*", "ledger*", "knowledge*", "sandbox*", "prompts*"]
exclude = ["*.map"]
